[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starbot"
version = "0.1.0"
description = "Discord assistant powered by Ollama, FAISS, and LangChain"
authors = [{name = "StarBot Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "langchain>=0.2.11",
  "langchain-ollama>=0.1.3",
  "faiss-cpu>=1.7.4",
  "numpy>=1.26",
  "requests>=2.32",
  "pydantic>=2.7",
]

[project.scripts]
starbot = "main:run"

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["starbot*"]
